baml_language/crates/baml_tests/snapshots/comment_after_string_in_config/baml_tests__comment_after_string_in_config__04_tir.snap
---
source: target/debug/build/baml_tests-5af6b621dd74eb70/out/generated_tests.rs
expression: output
---
=== TYPE INFERENCE ===
  Function OpenRouterMistralSmall3_1_24b$options:
    Return: Unknown
