baml_language/crates/baml_tests/snapshots/comment_after_string_in_config/baml_tests__comment_after_string_in_config__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== DIAGNOSTICS ===
  [type] Error: Unknown variable `env`
   ╭─[ test.baml:6:13 ]
   │
 6 │     api_key env.OPENROUTER_API_KEY
   │             ───────────┬──────────  
   │                        ╰──────────── Unknown variable `env`
   │ 
   │ Note: Error code: E0003
───╯

  [type] Error: Unknown variable `env`
   ╭─[ test.baml:6:13 ]
   │
 6 │     api_key env.OPENROUTER_API_KEY
   │             ───────────┬──────────  
   │                        ╰──────────── Unknown variable `env`
   │ 
   │ Note: Error code: E0003
───╯
